fix for text overflow #2280

--- a/client/styles/components/_overlay.scss
+++ b/client/styles/components/_overlay.scss
@@ -26,6 +26,7 @@
   max-width: 65%;
   position: relative;
   padding-bottom: #{25 / $base-font-size}rem;
+  overflow: scroll;
 }
 
 .overlay__header {
